--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,15 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="52"
+    android:viewportHeight="75">
+  <group android:scaleX="0.312"
+      android:scaleY="0.45"
+      android:translateX="17.888"
+      android:translateY="20.625">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M7.728,70.56C10.736,72.16 14.416,72.96 18.768,72.96C23.12,72.96 27.024,72.128 30.48,70.464C34,68.8 36.88,66.432 39.12,63.36C41.36,60.288 42.8,56.672 43.44,52.512H33.072C32.496,56.096 31.088,58.88 28.848,60.864C26.608,62.784 23.728,63.744 20.208,63.744C16.752,63.744 14.192,62.784 12.528,60.864C10.864,58.88 10.32,56.096 10.896,52.512L15.792,21.312C16.368,17.728 17.776,14.976 20.016,13.056C22.32,11.136 25.232,10.176 28.752,10.176C32.272,10.176 34.832,11.136 36.432,13.056C38.096,14.976 38.608,17.76 37.968,21.408H48.336C49.04,17.184 48.72,13.568 47.376,10.56C46.096,7.488 43.984,5.12 41.04,3.456C38.16,1.792 34.544,0.96 30.192,0.96C25.84,0.96 21.904,1.792 18.384,3.456C14.928,5.056 12.08,7.392 9.84,10.464C7.6,13.536 6.128,17.184 5.424,21.408L0.528,52.512C-0.112,56.672 0.176,60.32 1.392,63.456C2.672,66.528 4.784,68.896 7.728,70.56ZM40.49,74.02L40.33,75H45.09L45.25,74.02H43.47L44.18,69.5H41.45L41.3,70.48H42.98L42.42,74.02H40.49ZM43.21,68.37C43.33,68.49 43.507,68.55 43.74,68.55C43.98,68.55 44.177,68.49 44.33,68.37C44.49,68.243 44.587,68.077 44.62,67.87C44.653,67.657 44.61,67.49 44.49,67.37C44.37,67.243 44.193,67.18 43.96,67.18C43.727,67.18 43.53,67.243 43.37,67.37C43.217,67.49 43.12,67.657 43.08,67.87C43.053,68.077 43.097,68.243 43.21,68.37ZM48.046,74.59C48.286,74.863 48.656,75 49.156,75H50.696L50.856,74.02H49.356C48.983,74.02 48.829,73.83 48.896,73.45L49.366,70.48H51.516L51.666,69.5H49.516L49.756,68H48.676L48.436,69.5H46.916L46.766,70.48H48.286L47.816,73.45C47.736,73.937 47.813,74.317 48.046,74.59Z"
+        android:fillColor="#000000"
+        android:fillType="evenOdd"/>
+  </group>
 </vector>
